sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var nb=getNombreValeurs()
  var k=0
  for (i<-0 to nb-1){
    k=0
    while (k!=nb-1){
      if (plusPetit(getValeur(k),getValeur(i)){
        echange(i,k)
        k=i
      }else {k=i+1}
    }
  }
}